test/e2e/testdata/httproute-with-dynamic-resolver-address-filter.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-with-dynamic-resolver-address-filter
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: backend-dynamic-resolver-address-filter
---
apiVersion: v1
kind: Service
metadata:
  name: test-service-allowed
  namespace: gateway-conformance-infra
spec:
  selector:
    app: infra-backend-v1
  ports:
    - protocol: TCP
      port: 80
      name: http11
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: test-service-filtered
  namespace: gateway-conformance-infra
spec:
  selector:
    app: infra-backend-v1
  ports:
    - protocol: TCP
      port: 80
      name: http11
      targetPort: 3000
